--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <h1 class="heading">Bilgiler</h1>
 
     <p class="paragraph" >
-        Basvuru No:<span class="bold-text">42207/2024</span> <br>
+        Basvuru No:<span class="bold-text">42214/2024</span> <br>
         Basvuru Tip: <span class="bold-text">Ön izin Basvurusu</span> <br>
-        Çalisan (isçi) Ad Soyad: <span class="bold-text">FAIZ ULLAH ERKIN</span> <br>
-        Çalisan (isçi) Pasaport No: <span class="bold-text">P05716767</span> <br>
+        Çalisan (isçi) Ad Soyad: <span class="bold-text">MASUM KHAN</span> <br>
+        Çalisan (isçi) Pasaport No: <span class="bold-text">A03039388</span> <br>
         Calisan (isçi) TC Kimlik No: <br>
-        Calisan(isçi) Anne Adi: <span class="bold-text">MESTURE ERKIN</span> <br>
-        Çalisan(isçi) Baba Adi:<span class="bold-text"> CHARY ERKIN</span> <br>
+        Calisan(isçi) Anne Adi: <span class="bold-text">SUPIA BEGUM</span> <br>
+        Çalisan(isçi) Baba Adi:<span class="bold-text">SEKANDAR ALI KHAN</span> <br>
      
             </p>
             <br>
@@ -39,9 +39,9 @@
 
     <p class="paragraph">
 Belge Geçerilik Baslangiç Tarihi: <span class="bold-text">12.02.2024</span> <br>
-Belge Geçerlilik Bitig Tarih:<span class="bold-text">113.03.2024</span> <br>
+Belge Geçerlilik Bitig Tarih:<span class="bold-text">13.03.2024</span> <br>
 Onay Durumu<span class="bold-text"> Evet</span> <br>
-Onay Tarihi:  <span class="bold-text">1.02.2024 </span>
+Onay Tarihi:  <span class="bold-text">12.02.2024 </span>
     </p>
 
   </div>
